Fix videos spacing

--- a/src/components/SectionHeading/styles.scss
+++ b/src/components/SectionHeading/styles.scss
@@ -23,6 +23,13 @@
     margin-top: 30px;
   }
 
+  &--videos {
+    @include media-breakpoint-up(md) {
+      margin-bottom: -25px;
+    }
+    margin-bottom: -12px;
+  }
+
   &--opport {
     margin-top: 54px;
   }
